--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ __pycache__
 test.js
 main.css
 report.txt
-test1.js
-index1-2.html
-test1-2.js
+a2test.js
+a2-1.test.js
+a2-2.test.js
+a2-1solution.html
+a2-2solution.html
+template.html
